# tiktok-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/tiktok_mcp/: __init__.py  server.py  tiktok_client.py  tools.py
src/tiktok_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
